@@ -1686,7 +1686,7 @@ Replicator {
                 } else if (o2 == null) {
                     result = -1;
                 } else {
-                    result = new Long(Math.abs(o1.getTimePoint().until(timePoint).asMillis())).compareTo(
+                    result = Long.valueOf(Math.abs(o1.getTimePoint().until(timePoint).asMillis())).compareTo(
                             Math.abs(o2.getTimePoint().until(timePoint).asMillis()));
                 }
                 return result;
@@ -2153,7 +2153,7 @@ Replicator {
             result.put(
                     s.getName(),
                     new SeriesCreationParametersDTO(fleetNamesAndOrdering, s.isMedal(), s.isFleetsCanRunInParallel(), s.isStartsWithZeroScore(), s
-                            .isFirstColumnIsNonDiscardableCarryForward(), s.getResultDiscardingRule() == null ? null
+                            .isFirstColumnNonDiscardableCarryForward(), s.getResultDiscardingRule() == null ? null
                             : s.getResultDiscardingRule().getDiscardIndexResultsStartingWithHowManyRaces(), s
                             .hasSplitFleetContiguousScoring(), s.hasCrossFleetMergedRanking(), s.getMaximumNumberOfDiscards(), s.isOneAlwaysStaysOne()));
         }
@@ -5164,7 +5164,7 @@ Replicator {
         }
         final User user = getSecurityService().getCurrentUser();
         logger.info("Importing master data from "+urlAsString+" for leaderboard groups "+Arrays.toString(leaderboardGroupIds)+
-                " for user "+user.getName());
+                " for user "+user.getName()+" with import operation ID "+importOperationId);
         final String token = getSecurityService().getOrCreateTargetServerBearerToken(urlAsString, targetServerUsername, targetServerPassword, targetServerBearerToken);
         createOrUpdateDataImportProgressWithReplication(importOperationId, 0.0, DataImportSubProgress.INIT, 0.0);
         final UserGroup tenant = getSecurityService().getDefaultTenantForCurrentUser();
@@ -5208,7 +5208,9 @@ Replicator {
                 // try to obtain an error message from the connection's error stream:
                 try {
                     message = new BufferedReader(
-                            new InputStreamReader(((HttpURLConnection) connection).getErrorStream())).readLine();
+                            new InputStreamReader(((HttpURLConnection) connection).getErrorStream(),
+                                    HttpUrlConnectionHelper.getCharsetFromConnectionOrDefault(connection, "UTF-8")))
+                                            .readLine();
                 } catch (Exception exceptionTryingToReadErrorStream) {
                     // in this case we just stay with the exception's message
                 }
